# advent-of-code

./: .gitignore  LICENSE  README.md  get_day.py  pyproject.toml
2025/1/: README.md  solve.py
2025/2/: README.md  solve.py
2025/3/: README.md  solve.py
2025/4/: README.md  solve.py
2025/5/: README.md  solve.py
2025/5/2025/5/: README.md
2025/6/: README.md  solve.py
2025/7/: README.md  solve.py
templates/: solve.py
