[project]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of code puzzle repo"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "html-to-markdown>=2.14.1",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "migrations",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.14
target-version = "py314"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []
exclude = [".venv"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = []
unfixable = []

# Allow unused variables when underscore-prefixed.
#dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"  

[dependency-groups]
dev = [
    "notebook>=7.5.0",
]
